vpc.tf
provider "aws" {
    access_key = "AKIAT6JIZW5LGRLIGSCK"
    secret_key = "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"
    region = "us-east-1"
}

resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/18"
    
    tags = {
      "Name" = "Main_VPC1"
    }
}

resource "aws_subnet" "public" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.0.0/24"

  tags = {
    Name = "public subnet1"
  }
}

resource "aws_subnet" "private" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "private subnet1"
  }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "Main_IGW1"
  }
}

resource "aws_eip" "nat_eip" {
    vpc = true
    depends_on = [aws_internet_gateway.gw]
    tags = {
        Name = "NAT Gateway EIP1"
    }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public.id

  tags = {
    Name = "Main Nat Gateway1"
  }
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    route {
       cidr_block = "0.0.0.0/0"
       gateway_id = aws_internet_gateway.gw.id
    } 
    tags = {
       Name = "Public Route Table1"
    }
}
resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id
    route {
       cidr_block = "0.0.0.0/0"
       gateway_id = aws_internet_gateway.gw.id
    } 
    tags = {
       Name = "Private Route Table1"
    }
}
resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}
